Moving favicons to the static folder. Adding font-awesome icons on song analysis page. Removing CSRF requirements.

--- a/src/Components/Main/AnalyzedResults/AnalyzedResults.css
+++ b/src/Components/Main/AnalyzedResults/AnalyzedResults.css
@@ -2,3 +2,9 @@
     width: 100px;
     height: 100px;
 }
+
+@media (max-width: 414px) {  /* Hides Valence, Arousal, Dominance column on smaller screens. */
+    .showHideColumn {
+        display: none;
+    }
+}
