--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,8 +1,3 @@
-.container {
-    display: block;
-    min-height:100%;
-}
-
 .jumbotron {
     margin: 0 auto;
     max-width: 800px;
@@ -21,10 +16,10 @@ input {
     width: 224px;
 }
 
-hr {
+/* hr {
     padding: 10px 0px 10px 0px !important;
     margin: 20px auto 0px auto !important;   
-}
+} */
 
 ul {
     margin: 0px !important;
